--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Avatar image in top left corner -->
   <img src="/images/MC_headshot.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
-    <i class="fa fa-home w3-xxlarge"></i>
+    <i class="fa fa-home w3-xlarge"></i>
     <p>HOME</p>
   </a>
   <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
@@ -113,17 +113,17 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 <!-- Publications -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="pubs">
 
-<h2>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h2>
+<h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
 </p>
 
-<h2>Reports</h2>
+<h3>Reports</h3>
 <p> 
 Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href=" https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a>
 </p>
 
-<h2>Talks</h2>
+<h3>Talks</h3>
 <p> 
 Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> [virtual].
 </p>
@@ -134,7 +134,7 @@ Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT an
 Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> [virtual].
 </p>
 
-<h2>Posters</h2>
+<h3>Posters</h3>
 <p> 
 Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
 </p>
@@ -168,7 +168,7 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <i class="fa fa-twitter-square"></i>
-	<i class="fa fa-github-square"></i>
+	<a href="https://twitter.com/nz_mitch_><i class="fa fa-github-square"></i></a>
     <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
   </footer>
