--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fa fa-twitter-square"></i>
-	<a href="https://twitter.com/nz_mitch_><i class="fa fa-github-square"></i></a>
-    <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <p>
+	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square"></i></a> 	<a href="https://github.com/mlchandler"><i class="fa fa-github-square"></i></a>
+    </p>
+	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
   </footer>
 
