--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>M. Chandler</title>
+<title>Chandler, Mitchell</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -16,50 +16,55 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
+h2{ 
+	class="w3-text-light-grey" 
+	}
 <body class="w3-black">
+
 
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <!-- Avatar image in top left corner -->
-  <img src="/images/MC_headshot.jpg" style="width:100%">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
-    <i class="fa fa-home w3-xlarge"></i>
-    <p>HOME</p>
-  </a>
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-user w3-xlarge"></i>
-    <p>ABOUT</p>
-  </a>
-  
-  
-  <a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="	fa fa-lightbulb-o w3-xlarge"></i>
-    <p>EDUCATION</p>
-	
-	  <a href="#pubs" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-book w3-xlarge"></i>
-    <p>PUBLICATIONS</p>
-	
+	<img src="/images/MC_headshot.jpg" style="width:100%">
 
-			  <a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-twitter w3-xlarge"></i>
-    <p>TWITTER POSTERS</p>
+	<a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+	<i class="fa fa-home w3-xlarge"></i>
+	<p>HOME</p>
+	</a>
+  
+	<a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-user w3-xlarge"></i>
+	<p>ABOUT</p>
+	</a>
+   
+	<a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="	fa fa-lightbulb-o w3-xlarge"></i>
+	<p>EDUCATION</p>
+	</a>
 	
-  </a>
+	<a href="#publications" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-book w3-xlarge"></i>
+	<p>PUBLICATIONS</p>
+	</a>
+
+	<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-twitter w3-xlarge"></i>
+	<p>TWITTER POSTERS</p>
+	</a>
 </nav>
-
 
 
 
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-    <a href="#education" class="w3-bar-item w3-button" style="width:25% !important">EDUCATION</a>
-  </div>
+	<div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
+		<a href="#" class="w3-bar-item w3-button" style="width:25% !important">Home</a>
+		<a href="#about" class="w3-bar-item w3-button" style="width:25% !important">About</a>
+		<a href="#education" class="w3-bar-item w3-button" style="width:25% !important">Education</a>
+		<a href="#publications" class="w3-bar-item w3-button" style="width:25% !important">Publications</a>
+		<a href="#twitter_posters" class="w3-bar-item w3-button" style="width:25% !important">Twitter Posters</a>
+	</div>
 </div>
-
 
 
 
@@ -68,7 +73,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Mitchell Chandler</span></h1>
-    <p>Scripps Institution of Oceanography</p>
+    <p>contact: mlchandl at ucsd dot edu</p>
   </header>
 
 
@@ -76,6 +81,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 <!-- About Section -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+<hr style="width:200px" class="w3-opacity">
 <p> 
 I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography/UCSD advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and the recipient of a Fulbright student fellowship.
 </p>
@@ -98,8 +104,8 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="education">
 
 
-<h2 class="w3-text-light-grey">Education</h2>
-    <hr style="width:200px" class="w3-opacity">
+<h2 >Education</h2>
+<hr style="width:200px" class="w3-opacity">
 	
 <ul>
   <li>Graduate Student, Scripps Institution of Oceanography, 2019-current</li>
@@ -168,7 +174,9 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p>
-	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square"></i></a> 	<a href="https://github.com/mlchandler"><i class="fa fa-github-square"></i></a>
+	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square w3-large"></i></a>
+	<a href="https://github.com/mlchandler"><i class="fa fa-github-square w3-large"></i></a>
+	INSERT GOOGLE SCHOLAR
     </p>
 	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
