--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 #main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
-</style>
 h2{ 
 	class="w3-text-light-grey" 
 	}
+</style>
+
 <body class="w3-black">
 
 
@@ -118,6 +119,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
   
 <!-- Publications -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="pubs">
+<hr style="width:200px" class="w3-opacity">
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
@@ -156,6 +158,7 @@ Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network fo
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="twitter_posters">
 
 <h2>Twitter Posters</h2>
+<hr style="width:200px" class="w3-opacity">
 <p>
 Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences which were postponed and cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>), where he also provides templates to create your own!
 </p>
