--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Chandler, Mitchell</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,9 +16,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 #main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
-h2{ 
-	class="w3-text-light-grey" 
-	}
 </style>
 
 <body class="w3-black">
@@ -118,7 +116,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
   
   
 <!-- Publications -->
-<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="pubs">
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="publications">
 <hr style="width:200px" class="w3-opacity">
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
@@ -177,9 +175,9 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p>
-	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square w3-large"></i></a>
-	<a href="https://github.com/mlchandler"><i class="fa fa-github-square w3-large"></i></a>
-	INSERT GOOGLE SCHOLAR
+	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square w3-xlarge"></i></a>
+	<a href="https://github.com/mlchandler"><i class="fa fa-github-square w3-xlarge"></i></a>
+	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en"><i class="school w3-xlarge"></i></a>
     </p>
 	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
