--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+<nav class="w3-sidebar w3-bar-block w3-small w3-center">
 	<img src="/images/MC_headshot.jpg" style="width:100%">
 
 	<a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
@@ -54,16 +54,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 
-<!-- Navbar on small screens (Hidden on medium and large screens) -->
-<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-	<div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-		<a href="#" class="w3-bar-item w3-button" style="width:25% !important">Home</a>
-		<a href="#about" class="w3-bar-item w3-button" style="width:25% !important">About</a>
-		<a href="#education" class="w3-bar-item w3-button" style="width:25% !important">Education</a>
-		<a href="#publications" class="w3-bar-item w3-button" style="width:25% !important">Publications</a>
-		<a href="#twitter_posters" class="w3-bar-item w3-button" style="width:25% !important">Twitter Posters</a>
-	</div>
-</div>
+
 
 
 
@@ -177,7 +168,7 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
     <p>
 	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square w3-xlarge"></i></a>
 	<a href="https://github.com/mlchandler"><i class="fa fa-github-square w3-xlarge"></i></a>
-	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en"><i class="school w3-xlarge"></i></a>
+	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en"><i class="material-icons">school</i></a>
     </p>
 	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
