--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-center">
+<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<img src="/images/MC_headshot.jpg" style="width:100%">
 
 	<a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
@@ -158,15 +158,15 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
 <ul>
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
-<IMG SRC="/tposters/FC_2021.gif">
+<IMG class="w3-hide-small" SRC="/tposters/FC_2021.gif">
 
 </div>
 
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <p>
-	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square w3-xlarge"></i></a>
+    <p style="font-size:60px">
+	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square"></i></a>
 	<a href="https://github.com/mlchandler"><i class="fa fa-github-square w3-xlarge"></i></a>
 	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en"><i class="material-icons">school</i></a>
     </p>
