--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<i class="fa fa-twitter w3-xlarge"></i>
 	<p>TWITTER POSTERS</p>
 	</a>
+	
+	<hr style="width:100%" class="w3-opacity">
+	
+	<a href="https://twitter.com/nz_mitch_" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-twitter-square"></i>
+	</a>
+	
+	<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-github-square w3-xlarge"></i>
+	</a>
+	
+	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="material-icons">school</i>
+	</a>
+	
 </nav>
 
 
