--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+h2 {color: green;}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
@@ -54,7 +55,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	<hr style="width:100%" class="w3-opacity">
 	
 	<a href="https://twitter.com/nz_mitch_" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-	<i class="fa fa-twitter-square"></i>
+	<i class="fa fa-twitter-square w3-xlarge"></i>
 	</a>
 	
 	<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
@@ -62,7 +63,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	</a>
 	
 	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-	<i class="material-icons">school</i>
+	<i class="material-icons w3-xlarge">school</i>
 	</a>
 	
 </nav>
@@ -180,13 +181,7 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <p style="font-size:60px">
-	<a href="https://twitter.com/nz_mitch_"><i class="fa fa-twitter-square"></i></a>
-	<a href="https://github.com/mlchandler"><i class="fa fa-github-square w3-xlarge"></i></a>
-	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en"><i class="material-icons">school</i></a>
-    </p>
 	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-  <!-- End footer -->
   </footer>
 
 
