--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-p,h1,h2 {color: rgb(214, 214, 214)}
+h1,h2,h3 {color: rgb(214, 214, 214)}
+p {font-size: 2em}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
@@ -110,7 +111,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="education">
 
 
-<h2 >Education</h2>
+<h2>Education</h2>
 <hr style="width:200px" class="w3-opacity">
 	
 <ul>
@@ -124,6 +125,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
   
 <!-- Publications -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="publications">
+<h2>Publications</h2>
 <hr style="width:200px" class="w3-opacity">
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
