--- a/index.html
+++ b/index.html
@@ -176,7 +176,26 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
 </p>
-<IMG class="w3-hide-small" SRC="/tposters/FC_2021.gif">
+
+
+<!-- Grid for photos -->
+    <div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
+      <div class="w3-half">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="/w3images/sailboat.jpg" style="width:100%">
+      </div>
+
+      <div class="w3-half">
+        <img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="/w3images/chef.jpg" style="width:100%">
+        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/p6.jpg" style="width:100%">
+      </div>
+    <!-- End photo grid -->
+	
+	
+	
 
 </div>
 
