--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
     <div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
       <div class="w3-half">
         <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/sailboat.jpg" style="width:100%">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/chef.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/p6.jpg" style="width:100%">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/tposters/FC_2021.gif" style="width:100%">
       </div>
     <!-- End photo grid -->
 	
