--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@ h1,h2,h3 {color: rgb(214, 214, 214)}
 p {font-size: 1em}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
-.w3-sidebar {width: 120px;background: #222;}
-/* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-#main {margin-left: 120px}
-/* Remove margins from "page content" on small screens */
-@media only screen and (max-width: 600px) {#main {margin-left: 0}}
+.w3-sidebar {width: 150px;background: #222;}
+/* Add a left margin to the "page content" that matches the width of the sidebar (150px) */
+#main {margin-left: 150px}
+
 </style>
 
 <body class="w3-black">
@@ -79,8 +78,8 @@ p {font-size: 1em}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">Mitchell Chandler</span></h1>
-    <p>contact: mlchandl at ucsd dot edu</p>
+    <h1 class="w3-jumbo">Mitchell Chandler</h1>
+    <p>mlchandl at ucsd dot edu</p>
   </header>
 
 
@@ -176,23 +175,17 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
 </p>
-
-
-<!-- Grid for photos -->
+<!-- Twitter poster grid -->
     <div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
       <div class="w3-half">
         <img src="/tposters/FC_2021.gif" style="width:100%">
         <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
       </div>
 
       <div class="w3-half">
         <img src="/tposters/FC_2021.gif" style="width:100%">
         <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
       </div>
-    <!-- End photo grid -->
 	
 	
 	
