--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ p {font-size: 1em}
 /* Add a left margin to the "page content" that matches the width of the sidebar (150px) */
 #main {margin-left: 150px}
 
+
+/* Remove margins from "page content" on small screens */
+@media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
 
 <body class="w3-black">
@@ -89,15 +92,15 @@ p {font-size: 1em}
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
 <hr style="width:200px" class="w3-opacity">
 <p> 
-I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography/UCSD advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and the recipient of a Fulbright student fellowship.
+I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
 </p>
 
 <p>
-My thesis work aims to combine observations from multiple observing systems to produce estimates of upper ocean transport over longer time periods and at higher spatial and temporal resolutions than can presently be achieved by any one of these observing systems alone. These estimates will be used to examine trends and variability in western boundary currents (WBCs), which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between WBC variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
+My thesis work aims to combine observations from multiple observing systems to produce estimates of upper ocean transport over longer time periods and at higher spatial and temporal resolutions than can presently be achieved by any one of these observing systems alone. The estimates will be used to examine trends and variability in western boundary currents (WBCs), which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between WBC variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my <a href="https://mlchandler.github.io/research/">BSc(Hons)</a> I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a> (Otago).
+Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
 
 <p>
@@ -152,11 +155,7 @@ Chandler M. (2020). Measuring the subtropical western boundary currents of the I
 <p> 
 Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
 </p>
-
 </div>
-
-
-
 
 
 
@@ -166,7 +165,7 @@ Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network fo
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences which were postponed and cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>), where he also provides templates to create your own!
+Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>), where he also provides templates to create your own!
 </p>
 
 <p>
