--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@ p {font-size: 1em}
 .w3-sidebar {width: 150px;background: #222;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (150px) */
 #main {margin-left: 150px}
-
-
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
@@ -79,6 +77,7 @@ p {font-size: 1em}
 
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
+
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Mitchell Chandler</h1>
@@ -106,7 +105,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 <p>
 <b>Research Interests:</b> Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves.
 </p>
-
+</div>
 
 
 <!-- Education -->
@@ -122,7 +121,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
   <li>BSc, University of Otago, 2015-2017</li>
 </ul>
 </p>
-  
+  </div>
   
   
 <!-- Publications -->
@@ -190,7 +189,7 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
 	
 
 </div>
-
+</div>
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
