--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 h1,h2,h3 {color: rgb(214, 214, 214)}
 p {font-size: 1em}
+a { text-decoration: none; 
+	color: #777; }
+a:hover { text-decoration: underline; }
+body { width: 80%; }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 150px;background: #222;}
