--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 h1,h2,h3 {color: rgb(214, 214, 214)}
 p {font-size: 1em}
 a { text-decoration: none; 
+	font-weight: bold;
 	color: #777; }
 a:hover { text-decoration: underline; }
-body { width: 80%; }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 150px;background: #222;}
@@ -32,7 +32,7 @@ body { width: 80%; }
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<img src="/images/MC_headshot.jpg" style="width:100%">
 
-	<a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+	<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
 	<i class="fa fa-home w3-xlarge"></i>
 	<p>HOME</p>
 	</a>
