placeholder twitter posters

--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
     <div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
       <div class="w3-half">
         <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/tposters/placeholder.gif" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
+        <img src="/tposters/placeholder.gif" style="width:100%">
+        <img src="/tposters/placeholder.gif" style="width:100%">
       </div>
 	
 	
