--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-h1,h2,h3 {color: rgb(214, 214, 214)}
+h1,h2,h3,h4 {color: rgb(214, 214, 214)}
 p {font-size: 1em}
 a { text-decoration: none; 
 	font-weight: bold;
@@ -105,9 +105,9 @@ My thesis work aims to combine observations from multiple observing systems to p
 <p>
 Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
-
+<h4>Research Interests</h4>
 <p>
-<b>Research Interests:</b> Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves.
+Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves.
 </p>
 </div>
 
