--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ a:hover { text-decoration: underline; }
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo">Mitchell Chandler</h1>
-    <p>mlchandl at ucsd dot edu</p>
+    <p>mlchandler at ucsd dot edu</p>
   </header>
 
 
@@ -107,7 +107,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 </p>
 <h4>Research Interests</h4>
 <p>
-Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves.
+Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
 </p>
 </div>
 
@@ -168,11 +168,11 @@ Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network fo
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>), where he also provides templates to create your own!
+Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>) where he also provides templates to create your own!
 </p>
 
 <p>
-I have taken to making Twitter Posters for my peer-reviewed research as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
+I have taken to making Twitter Posters as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
 <ul>
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
