--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 h1,h2,h3,h4 {color: rgb(214, 214, 214)}
@@ -15,6 +16,7 @@ a { text-decoration: none;
 	font-weight: bold;
 	color: #777; }
 a:hover { text-decoration: underline; }
+
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 150px;background: #222;}
@@ -25,8 +27,6 @@ a:hover { text-decoration: underline; }
 </style>
 
 <body class="w3-black">
-
-
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
@@ -70,29 +70,24 @@ a:hover { text-decoration: underline; }
 	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
 	<i class="material-icons w3-xlarge">school</i>
 	</a>
-	
 </nav>
-
-
-
-
 
 
 
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
 
-  <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo">Mitchell Chandler</h1>
-    <p>mlchandler at ucsd dot edu</p>
-  </header>
-
+<!-- Header/Home -->
+<header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+	<h1 class="w3-jumbo">Mitchell Chandler</h1>
+	<p>mlchandler at ucsd dot edu</p>
+</header>
 
 
 
 <!-- About Section -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+
 <hr style="width:200px" class="w3-opacity">
 <p> 
 I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
@@ -105,16 +100,18 @@ My thesis work aims to combine observations from multiple observing systems to p
 <p>
 Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
+
 <h4>Research Interests</h4>
 <p>
 Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
 </p>
+
 </div>
+
 
 
 <!-- Education -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="education">
-
 
 <h2>Education</h2>
 <hr style="width:200px" class="w3-opacity">
@@ -125,11 +122,14 @@ Boundary currents; Western boundary currents; Observational oceanography; Argo; 
   <li>BSc, University of Otago, 2015-2017</li>
 </ul>
 </p>
-  </div>
+
+</div>
+  
   
   
 <!-- Publications -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="publications">
+
 <h2>Publications</h2>
 <hr style="width:200px" class="w3-opacity">
 
@@ -158,6 +158,7 @@ Chandler M. (2020). Measuring the subtropical western boundary currents of the I
 <p> 
 Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
 </p>
+
 </div>
 
 
@@ -177,31 +178,31 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
 </p>
-<!-- Twitter poster grid -->
-    <div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
-      <div class="w3-half">
-        <img src="/tposters/FC_2021.gif" style="width:100%">
-        <img src="/tposters/placeholder.gif" style="width:100%">
-      </div>
 
-      <div class="w3-half">
-        <img src="/tposters/placeholder.gif" style="width:100%">
-        <img src="/tposters/placeholder.gif" style="width:100%">
-      </div>
-	
-	
-	
+	<!-- Twitter poster tiling -->
+	<div class="w3-row-padding w3-hide-small" style="margin:0 -16px">
+		<div class="w3-half">
+			<img src="/tposters/FC_2021.gif" style="width:100%">
+			<img src="/tposters/placeholder.gif" style="width:100%">
+		</div>
+		<div class="w3-half">
+			<img src="/tposters/placeholder.gif" style="width:100%">
+			<img src="/tposters/placeholder.gif" style="width:100%">
+		</div>
+	</div>
 
 </div>
+
+
+
 </div>
+
+
   
-    <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+<!-- Footer -->
+<footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
 	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-  </footer>
-
-
-
+</footer>
 
 <!-- END PAGE CONTENT -->
 </div>
