--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ a:hover { text-decoration: underline; }
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
 	<p>mlchandler at ucsd dot edu</p>
+	
+	<img src="/images/MC_header.jpg" alt="boy" class="w3-image" width="992" height="1108">
+	
 </header>
 
 
@@ -198,7 +201,30 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 </div>
 
 
-  
+<!-- Twitter Posters -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="gallery">
+
+<h2>Academic Gallery</h2>
+<hr style="width:200px" class="w3-opacity">
+	<div class="w3-row-padding" style="margin:0 -16px">
+		<div class="w3-half">
+			<img src="/images/gallery/OSM2020.jpg" style="width:100%">
+			<img src="/images/gallery/government_house.jpg" style="width:100%">
+		</div>
+		<div class="w3-half">
+			<img src="/tposters/placeholder.gif" style="width:100%">
+			<img src="/tposters/placeholder.gif" style="width:100%">
+		</div>
+	</div>
+
+</div>
+
+
+
+</div>
+
+
+
 <!-- Footer -->
 <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
 	<p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
