--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@ a:hover { text-decoration: underline; }
 	<p>TWITTER POSTERS</p>
 	</a>
 	
+	<a href="#gallery" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="	fa fa-photo w3-xlarge"></i>
+	<p>ACADEMIC GALLERY</p>
+	</a>
+	
 	<hr style="width:100%" class="w3-opacity">
 	
 	<a href="https://twitter.com/nz_mitch_" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
@@ -198,28 +203,20 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 
 
 
-</div>
-
-
-<!-- Twitter Posters -->
+<!-- Academic Gallery -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="gallery">
 
 <h2>Academic Gallery</h2>
 <hr style="width:200px" class="w3-opacity">
 	<div class="w3-row-padding" style="margin:0 -16px">
 		<div class="w3-half">
-			<img src="/images/gallery/OSM2020.jpg" style="width:100%">
-			<img src="/images/gallery/government_house.jpg" style="width:100%">
+			<img src="/images/gallery/OSM2020.jpg" style="width:80%">
+			<img src="/images/gallery/fulbright.jpg" style="width:80%">
 		</div>
 		<div class="w3-half">
-			<img src="/tposters/placeholder.gif" style="width:100%">
-			<img src="/tposters/placeholder.gif" style="width:100%">
+			<img src="/images/gallery/government_house.jpg" style="width:80%">
 		</div>
 	</div>
-
-</div>
-
-
 
 </div>
 
