--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ a:hover { text-decoration: underline; }
 
 
 
+<!-- Small screen navbar links (Hidden on medium and large screens) -->
+
+
+
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
 
@@ -87,7 +91,7 @@ a:hover { text-decoration: underline; }
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
 	<p>mlchandler at ucsd dot edu</p>
 	
-	<img src="/images/MC_header.jpg" alt="boy" class="w3-image" width="992" height="1108">
+	<img src="/images/MC_header.jpg" class="w3-image" width="80%">
 	
 </header>
 
@@ -210,11 +214,11 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 <hr style="width:200px" class="w3-opacity">
 	<div class="w3-row-padding" style="margin:0 -16px">
 		<div class="w3-half">
-			<img src="/images/gallery/OSM2020.jpg" style="width:80%">
-			<img src="/images/gallery/fulbright.jpg" style="width:80%">
+			<img src="/images/gallery/OSM2020.jpg" style="width:90%">
 		</div>
 		<div class="w3-half">
-			<img src="/images/gallery/government_house.jpg" style="width:80%">
+			<img src="/images/gallery/fulbright.jpg" style="width:90%">
+			<img src="/images/gallery/government_house.jpg" style="width:90%">
 		</div>
 	</div>
 
