phone navigation bar

--- a/index.html
+++ b/index.html
@@ -79,8 +79,15 @@ a:hover { text-decoration: underline; }
 
 
 
-<!-- Small screen navbar links (Hidden on medium and large screens) -->
-
+<!-- Small screen dropdown navbar (hidden on medium and large screens) -->
+<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+  <a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About</a>
+  <a href="#education" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">EDUCATION</a>
+  <a href="#publications" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PUBLICATIONS</a>
+  <a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Twitter Posters</a>
+  <a href="#gallery" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ACADEMIC GALLERY</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+</div>
 
 
 <!-- Page Content -->
@@ -89,10 +96,7 @@ a:hover { text-decoration: underline; }
 <!-- Header/Home -->
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
-	<p>mlchandler at ucsd dot edu</p>
-	
-	<img src="/images/MC_header.jpg" class="w3-image" width="80%">
-	
+	<p>mlchandler at ucsd dot edu</p>	
 </header>
 
 
@@ -117,7 +121,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 <p>
 Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
 </p>
-
+<img src="/images/MC_header.jpg" class="w3-image" width="80%">
 </div>
 
 
