--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ a { text-decoration: none;
 	color: #777; }
 a:hover { text-decoration: underline; }
 
+img.centre-image {	display: block;
+					margin-left: auto;
+					margin-right: auto }
+
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 150px;background: #222;}
@@ -117,11 +121,13 @@ My thesis work aims to combine observations from multiple observing systems to p
 Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
 
+<img src="/images/MC_header.jpg" class="centre-image" width="50%">
+
 <h4>Research Interests</h4>
 <p>
 Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
 </p>
-<img src="/images/MC_header.jpg" class="w3-image" width="80%">
+
 </div>
 
 
