--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ img.centre-image {	display: block;
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
 	<p>mlchandler at ucsd dot edu</p>	
+	<img src="/images/MC_header.jpg" class="centre-image w3-hide-small" width="50%">
+	<img src="/images/MC_header.jpg" class="centre-image w3-hide-medium w3-hide-large" width="80%">
 </header>
 
 
@@ -120,8 +122,6 @@ My thesis work aims to combine observations from multiple observing systems to p
 <p>
 Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
-
-<img src="/images/MC_header.jpg" class="centre-image" width="50%">
 
 <h4>Research Interests</h4>
 <p>
