--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@ img.centre-image {	display: block;
 <div class="w3-top">
 	<div class="w3-bar w3-black w3-card">
 		<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left w3-xlarge" href="javascript:void(0)" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-		<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-home"></i></a>
+		
 		<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="material-icons w3-xlarge">school</i></a>
 		<a href="https://twitter.com/nz_mitch_" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-twitter"></i></a>    
+		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-github"></i></a>    
 		
 		<div id="navSmall" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
 			<a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About</a>
@@ -111,8 +112,7 @@ img.centre-image {	display: block;
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
 	<p>mlchandler at ucsd dot edu</p>	
-	<img src="/images/MC_header.jpg" class="centre-image w3-hide-small" width="50%">
-
+	<img src="/images/MC_header.jpg" class="centre-image" width="100%">
 </header>
 
 
