--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ a { text-decoration: none;
 	color: #777; }
 a:hover { text-decoration: underline; }
 
-img.centre-image {	display: block;
-					margin-left: auto;
-					margin-right: auto }
+img.head-image { max-width: 500px; }
 
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
@@ -112,7 +110,7 @@ img.centre-image {	display: block;
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
 	<p>mlchandler at ucsd dot edu</p>	
-	<img src="/images/MC_header.jpg" class="centre-image" width="100%">
+	<img src="/images/MC_header.jpg" class="head-image">
 </header>
 
 
