--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ a { text-decoration: none;
 	font-weight: bold;
 	color: #777; }
 a:hover { text-decoration: underline; }
-img.head-image { max-width: 600px; }
+img.head-image { width: 100%;
+				 max-width: 600px; }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 150px;background: #222;}
