--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 </p>
 
 <h3>Talks</h3>
+<p>
+Chandler M, Zilberman NV, Sprintall J. (2021). Western boundary current research using Argo, HR-XBT, and satellite altimetry. <i>12th Observation Coordination Group Workshop: Boundary Currents</i> [virtual].
+</p>
 <p> 
 Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> [virtual].
 </p>
