--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 	<div class="w3-row-padding" style="margin:0 -16px">
 		<div class="w3-half">
 			<img src="/images/gallery/OSM2020.jpg" style="width:90%">
+			<img src="/images/gallery/sioc218.jpg" style="width:90%">
 		</div>
 		<div class="w3-half">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%">
