--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ img.head-image { width: 100%;
 	
 	<hr style="width:100%" class="w3-opacity">
 	
-	<a href="https://twitter.com/nz_mitch_" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
 	<i class="fa fa-twitter-square w3-xlarge"></i>
 	</a>
 	
