--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ img.head-image { width: 100%;
 <!-- Header/Home -->
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
-	<p>mlchandler at ucsd dot edu</p>	
+	<p>mlchandler@ucsd.edu</p>	
 	<img src="/images/MC_header.jpg" class="head-image">
 </header>
 
