--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@ img.head-image { width: 100%;
 
 <hr style="width:200px" class="w3-opacity">
 <p> 
-I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
+I am a third-year physical oceanography graduate student at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
 </p>
 
 <p>
-My thesis work aims to combine observations from multiple observing systems to produce estimates of upper ocean transport over longer time periods and at higher spatial and temporal resolutions than can presently be achieved by any one of these observing systems alone. The estimates will be used to examine trends and variability in western boundary currents (WBCs), which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between WBC variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
+My thesis work aims to combine observations from multiple observing systems to produce estimates of upper ocean transport over longer time periods and at higher spatial and temporal resolutions than can presently be achieved by any one of these observing systems alone. These estimates can be used to examine trends and variability in western boundary currents (WBCs), which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between WBC variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
 </p>
 
 <p>
