--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 h1,h2,h3,h4 {color: rgb(214, 214, 214)}
-p {font-size: 1em}
+p {font-size: 1em;
+	color: rgb(200, 200, 200)}
 a { text-decoration: none; 
 	font-weight: bold;
 	color: #777; }
@@ -188,7 +189,7 @@ Chandler M. (2020). Measuring the subtropical western boundary currents of the I
 
 <h3>Posters</h3>
 <p> 
-Chandler M, Zilberman NV, Sprintall J. A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Scripps Student Symposium 2021.</i> [pdf to be uploaded soon] <span style="color: #FFD700">*Awarded Best Poster*</span> 
+Chandler M, Zilberman NV, Sprintall J. A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Scripps Student Symposium 2021.</i> (pdf to be uploaded soon) <span style="color: #FFD700">*Awarded Best Poster*</span> 
 </p>
 
 <p> 
