--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif;
-						color: rgb(200, 200, 200)}
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 h1,h2,h3,h4 {color: rgb(255, 255, 255)}
-p {font-size: 1em}
+p,ul {font-size: 1em;
+	color: rgb(200, 200, 200)}
 a { text-decoration: none; 
 	font-weight: bold;
 	color: #777; }
