update twitter links

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ img.head-image { width: 100%;
 		<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left w3-xlarge" href="javascript:void(0)" onclick="myFunction()"><i class="fa fa-bars"></i></a>
 		
 		<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="material-icons w3-xlarge">school</i></a>
-		<a href="https://twitter.com/nz_mitch_" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-twitter"></i></a>    
+		<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-twitter"></i></a>    
 		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-github"></i></a>    
 		
 		<div id="navSmall" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
@@ -212,7 +212,7 @@ Twitter posters were brought to my attention by Mike Morrison and were conceived
 <p>
 I have taken to making Twitter Posters as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
 <ul>
-  <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
+  <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
 </p>
 
