--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@ Boundary currents; Western boundary currents; Observational oceanography; Argo; 
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
+Floerl O, Atalah J, Bugnot AB, Chandler M, Dafforn KA, Floerl L, Zaiko A, Major R. (2021). A global model to forecast coastal hardening and mitigate associated socioecological risks. <i>Nature Sustainability.</i> <a href="https://www.nature.com/articles/s41893-021-00780-w">DOI: 10.1038/s41893-021-00780-w</a>
+</p>
+<p>
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
 </p>
 
