--- a/index.html
+++ b/index.html
@@ -192,9 +192,11 @@ Chandler M. (2020). Measuring the subtropical western boundary currents of the I
 
 <h3>Posters</h3>
 <p> 
+Chandler M, Zilberman NV, Sprintall J. A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Graduate Climate Conference 2021.</i> 
+</p>
+<p> 
 Chandler M, Zilberman NV, Sprintall J. A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Scripps Student Symposium 2021.</i> (pdf to be uploaded soon) <span style="color: #FFD700">*Awarded Best Poster*</span> 
 </p>
-
 <p> 
 Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
 </p>
