--- a/index.html
+++ b/index.html
@@ -178,27 +178,30 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 
 <h3>Talks</h3>
 <p>
-Chandler M, Zilberman NV, Sprintall J. (2021). Western boundary current research using Argo, HR-XBT, and satellite altimetry. <i>12th Observation Coordination Group Workshop: Boundary Currents</i> [virtual].
+Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">slides</a>
+</p>
+<p>
+Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
 <p> 
-Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> [virtual].
+The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.</i> <a href="slides/Chandler_NZPOW2020.pdf">slides</a>
 </p>
 <p> 
-Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> [virtual].
+Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. (2020). <i>NOAA Invited Seminar.</i>
 </p>
 <p> 
-Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> [virtual].
+Measuring the subtropical western boundary currents of the Indo-Pacific. (2020). <i>Graduate Climate Conference 2020.</i>
 </p>
 
 <h3>Posters</h3>
 <p> 
-Chandler M, Zilberman NV, Sprintall J. A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Graduate Climate Conference 2021.</i> 
+A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Graduate Climate Conference 2021.</i> 
 </p>
 <p> 
-Chandler M, Zilberman NV, Sprintall J. A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. <i>Scripps Student Symposium 2021.</i> (pdf to be uploaded soon) <span style="color: #FFD700">*Awarded Best Poster*</span> 
+A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Scripps Student Symposium 2021.</i> <a href="posters/Chandler_S32021.pdf">pdf</a> <span style="color: #FFD700">*Awarded Best Poster*</span> 
 </p>
 <p> 
-Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
+Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
 </p>
 
 </div>
