--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ I am a third-year physical oceanography graduate student at Scripps Institution 
 </p>
 
 <p>
-My thesis work aims to combine observations from multiple observing systems to produce estimates of upper ocean transport over longer time periods and at higher spatial and temporal resolutions than can presently be achieved by any one of these observing systems alone. These estimates can be used to examine trends and variability in western boundary currents (WBCs), which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between WBC variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
+My thesis work aims to combine observations from multiple observing systems to produce estimates of velocity between the ocean surface and 1975-m depth over longer time periods than most other subsurface velocity time series. These estimates are used to examine trends and variability in western boundary currents, which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between western boundary current variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
 </p>
 
 <p>
@@ -133,7 +133,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 
 <h4>Research Interests</h4>
 <p>
-Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
+Boundary currents; Western boundary currents; Deep western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
 </p>
 
 </div>
@@ -178,13 +178,13 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 
 <h3>Talks</h3>
 <p>
-Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">slides</a>
+Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a>
 </p>
 <p>
 Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
 <p> 
-The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.</i> <a href="slides/Chandler_NZPOW2020.pdf">slides</a>
+The Fiordland Current: mean, variability, trends. (2020). <i>New Zealand Physical Oceanography Workshop 2020.</i> <a href="slides/Chandler_NZPOW2020.pdf">[slides]</a>
 </p>
 <p> 
 Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. (2020). <i>NOAA Invited Seminar.</i>
@@ -198,10 +198,10 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Graduate Climate Conference 2021.</i> 
 </p>
 <p> 
-A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Scripps Student Symposium 2021.</i> <a href="posters/Chandler_S32021.pdf">pdf</a> <span style="color: #FFD700">*Awarded Best Poster*</span> 
+A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Scripps Student Symposium 2021.</i> <span style="color: #FFD700">*Awarded Best Poster*</span> <a href="posters/Chandler_S32021.pdf">[pdf]</a> 
 </p>
 <p> 
-Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
+Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
 </p>
 
 </div>
